# cryobednet-pro

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  dvc.yaml  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: bedmachine_rrdb_gpu.yaml  bedmachine_terrain_gpu.yaml  local_polished.yaml  mock_cpu.yaml  sol_gpu.yaml  srgan_region_holdout.yaml
docs/: ATTRIBUTION.md  DATA_SOURCES.md  PUBLISHING_COMMANDS.md  REAL_DATA_PROTOCOL.md  RESUME_AND_LINKEDIN.md  SOL_GUIDE.md  TECHNICAL_REPORT.md
reports/: FIGURE_CHECKLIST.md
reports/terrain_bedmachine/: metrics_holdout.json  metrics_val.json
scripts/: append_metrics_to_readme.py  build_bedmachine_tiles.py  build_tile_index.py  export_figures.py  filter_terrain_tiles.py  make_mock_data.py  print_region_counts.py
slurm/: evaluate_bedmachine_cpu.sbatch  evaluate_bedmachine_terrain_cpu.sbatch  evaluate_cpu.sbatch  interactive_gpu.txt  train_bedmachine_gpu.sbatch  train_bedmachine_terrain_gpu.sbatch  train_gpu.sbatch
src/cryobednet/: config.py  evaluate.py  infer.py  losses.py  metrics.py  train.py  utils.py  visualization.py
src/cryobednet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cryobednet/models/: discriminator.py  generator.py
tests/: test_dataset.py  test_metrics.py
utputs/local_polished/: history.csv  metrics_holdout.json  metrics_val.json  splits.json
