[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryobednet"
version = "0.1.0"
description = "Antarctic bed-topography super-resolution with PyTorch and HPC workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Tejas Sharma"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-image>=0.21",
  "pyyaml>=6.0",
  "torch>=2.1",
  "tqdm>=4.66"
]

[project.optional-dependencies]
geo = ["rasterio>=1.3", "xarray>=2024.1", "rioxarray>=0.15", "geopandas>=0.14"]
mlops = ["mlflow>=2.12", "dvc>=3.50"]
dash = ["streamlit>=1.36", "plotly>=5.22"]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
